:bug: Fix menu z-index:2
 - Menu responsivo add um z-index 2

--- a/Client/src/components/Header/styles.css
+++ b/Client/src/components/Header/styles.css
@@ -154,6 +154,7 @@
         background-color: white;
         border-top: 1px solid black;
         border-radius: 0;
+        z-index: 2;
     }
 
     .navigation-menu li {
